--- a/index.html
+++ b/index.html
@@ -1,8 +1,20 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>irlprincess</title>
+  </head>
   <body>
 <h1>Princess</h1>
-    
+<p>Hello I am princess</p>
+<p>And here are some things about me.</p>
+<h2>Favorite Color</h2>
+<br>
+<h2>Names I want to be called</h2>
+<br>
+<h2>Things I like</h2>
+<br>
 
     
   </body>
