--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
   </head>
   <body>
 <h1>Princess</h1>
+<canvas id="myCanvas" width="200" height="100"></canvas>
+<script>
+  const canvas = document.getElementById("myCanvas");
+  const ctx = canvas.getContext("2d");
+  const image = document.getElementById("Asia");
+
+  image.addEventListener("load", (e) => {
+    ctx.drawImage(Asia, 10, 10);
+  });
+</script>
 <p>Hello I am princess</p>
 <p>And here are some things about me.</p>
 <h2>Favorite Color</h2>
