--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>irlprincess</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
 <h1>Princess</h1>
-<img src="Asia.jpg" alt="Me">
+<img src="Asia.jpg" alt="Me" style="width:220px;height:300px;">
 <p>Hello I am princess</p>
 <p>And here are some things about me.</p>
 <h2>Favorite Color</h2>
