--- a/index.html
+++ b/index.html
@@ -5,17 +5,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>irlprincess</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <style>
+      div {
+        border: 1px solid pink;
+        margin: 2px 550px 20px 100px;
+        padding: 25px;
+        padding-right: 500px;
+        background-color: white;
+        text-align: center;
+      }
+    </style>
   </head>
   <body>
-<h1>Princess</h1>
+<div>irlprincess.com Home of the princess</div>
 <img src="Asia.jpg" alt="Me" style="width:220px;height:300px;">
-<p>Hello I am princess</p>
+<p>Hallo ^-^</p>
 <p>And here are some things about me.</p>
 <h2>Favorite Color</h2>
+<h3>Purple</h3>
 <br>
 <h2>Names I want to be called</h2>
+<h3>princess</h3>
+<h3>sunshine</h3>
+<h3>doll</h3>
 <br>
-<h2>Things I like</h2>
+<h2>Things I like</h2>>
+<h3>Hello Kitty</h3>
+<h3>Roblox</h3>
+<h3></h3>
 <br>
 
     
