--- a/index.html
+++ b/index.html
@@ -25,14 +25,13 @@
 <h3>Purple</h3>
 <br>
 <h2>Names I want to be called</h2>
-<h3>princess</h3>
-<h3>sunshine</h3>
-<h3>doll</h3>
+<p>princess</p>
+<p>sunshine</p>
+<p>doll</p>
 <br>
 <h2>Things I like</h2>>
-<h3>Hello Kitty</h3>
-<h3>Roblox</h3>
-<h3></h3>
+<p>Hello Kitty</p>
+<p>Roblox</p>
 <br>
 
     
