--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <p>Hallo ^-^</p>
 <p>And here are some things about me.</p>
 <h2>Favorite Color</h2>
-<h3>Purple</h3>
+<p>Purple</p>
 <br>
 <h2>Names I want to be called</h2>
 <p>princess</p>
