--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body>
 <div>irlprincess.com Home of the princess</div>
 <img src="Asia.jpg" alt="Me" style="width:220px;height:300px;">
-<p>Hallo ^-^</p>
+<h1>Hallo ^-^</h1>
 <p>And here are some things about me.</p>
 <h2>Favorite Color</h2>
 <p>Purple</p>
@@ -29,7 +29,7 @@
 <p>sunshine</p>
 <p>doll</p>
 <br>
-<h2>Things I like</h2>>
+<h2>Things I like</h2>
 <p>Hello Kitty</p>
 <p>Roblox</p>
 <br>
