--- a/index.html
+++ b/index.html
@@ -14,20 +14,17 @@
   <body>
 <div>irlprincess.com Home of the princess</div>
 <img src="Asia.jpg" alt="Me" style="width:200px;height:300px;">
-<h1>Hallo ^-^</h1>
+<h1>Hallo ^_^</h1>
 <p>And here are some things about me.</p>
 <h2>Favorite Color</h2>
 <p>Purple</p>
-<br>
 <h2>Names I want to be called</h2>
 <p>princess</p>
 <p>sunshine</p>
 <p>doll</p>
-<br>
 <h2>Things I like</h2>
 <p>Hello Kitty</p>
 <p>Roblox</p>
-<br>
 
     
   </body>
