--- a/index.html
+++ b/index.html
@@ -5,26 +5,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>irlprincess</title>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <style>
-      div {
-        text-align: center;
-      }
-    </style>
+    </head>
+    <body>
+    <div class="container">
+      <div class="header">
+        <h1>Princess</h1>
+      </div>
+      <div class="profile-picture">
+        <img src="pHelloKitty3.png" alt="Profile Picture">
+      </div>
+      <div class="info">
+        <p>Personality: kind and sweet</p>
+        <p>Age: 21</p>
+        <p>My ID: #9k</p>
+      </div>
+      <div class="favorites">
+        <h2>Favorites</h2>
+        <ul>
+            <li>strawberries and cream</li>
+            <li>chocolate</li>
+            <li>butter cookies</li>
+        </ul>
+      </div>
+      <div class="footer">
+      <p>Album</p>
+      <img src="mee.jpg" alt="Album Image">
+      </div>
+    </div>
+    <script src="script.js"></script>
   </head>
-  <body>
-<div>irlprincess.com Home of the princess</div>
-<h1>Hallo ^_^</h1>
-<p>And here are some things about me.</p>
-<h2>Favorite Color</h2>
-<p>Purple</p>
-<h2>Names I want to be called</h2>
-<p>princess</p>
-<p>sunshine</p>
-<p>doll</p>
-<h2>Things I like</h2>
-<p>Hello Kitty</p>
-<p>Roblox</p>
-
-    
   </body>
 </html>
