--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1>Princess</h1>
       </div>
       <div class="profile-picture">
-        <img src="pHelloKitty3.png" alt="Profile Picture">
+        <img src="pHelloKitty5.jpg" alt="Profile Picture" height="50" width="50">
       </div>
       <div class="info">
         <p>Personality: kind and sweet</p>
@@ -29,7 +29,7 @@
       </div>
       <div class="footer">
       <p>Album</p>
-      <img src="mee.jpg" alt="Album Image">
+      <img src="pinkk.jpg" alt="Album Image">
       </div>
     </div>
     <script src="script.js"></script>
