--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <div class="favorites">
         <h2>Favorites</h2>
         <ul>
-            <li>strawberries and cream</li>
+            <li>yogurt</li>
             <li>chocolate</li>
             <li>butter cookies</li>
         </ul>
